--- a/src/components/EmployeeCard/style.css
+++ b/src/components/EmployeeCard/style.css
@@ -1,3 +1,8 @@
+/* @font-face {
+  font-family: GROBOLD;
+  src: url("../../GROBOLD.ttf");
+} */
+
 .card {
   background: #fff;
   border-radius: 2px;
@@ -23,6 +28,7 @@
   padding-left: 1rem;
   padding-right: 1rem;
   font-size: 15px;
+  /* font-family: GROBOLD, serif; */
 }
 
 .card > .content > ul {
